dynamic database driven Link in Bio

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,83 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
+    
+    <style>
+
+      html {
+        min-height: 100%;
+      }
+
+      body {
+        min-height: 100%;
+        padding: 40px 0;
+        background: linear-gradient(180deg, #003f5b, #00127a, #3c0098, #ab00b6, #d5006f, #f30600, #ff9913); /* made at https://learnui.design/tools/gradient-generator.html */;
+        color: white;
+        font-family: "Raleway";
+      }
+
+      a {
+        color: white;
+        text-decoration: none;
+      }
+
+      .main-container {
+        max-width: 640px;
+        margin: auto;
+      }
+
+      .image-row {
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      .name-row {
+        margin-bottom: 30px;
+        text-align: center;
+        font-family: "Playfair Display";
+        font-size: 24px;
+        font-weight: 900;
+      }
+
+      .social-icons-row {
+        margin-bottom: 30px;
+        display: flex;
+        justify-content: space-around;
+      }
+
+      .item {
+        background-color: rgba(149, 123, 173, 0.5);
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+        border-radius: 1000px;
+        padding: 5px;
+        padding-right: 53px;
+        box-shadow: 4px 4px 10px 0px rgba(122, 32, 122, 0.5);
+      }
+
+      .avatar-image {
+        width: 128px;
+        height: auto;
+        object-fit: cover;
+        border-radius: 128px;
+      }
+
+      .thumbnail {
+        width: 48px;
+        height: 48px;
+        border-radius: 48px;
+        object-fit: cover;
+      }
+
+      .link-text {
+        text-align: center;
+        flex-grow: 1;
+      }
+
+    </style>
+
   </head>
 
   <body>
